# glUI

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile
glUI/: MessageBox.hpp  common.hpp  glUI.cpp  glUI.hpp  logger.hpp  renderer.cpp  renderer.hpp  widget.cpp  widget.hpp
glUI/Glyphs/: GlyphRange_ENG.csv  GlyphRange_JPN.csv  IconTexture.csv
glUI/glyphRangeCreator/: NameList2.txt  NamesList.txt  glyphs.cpp  myfile.txt  output.txt  temp.py
glUI/glyphRangeCreator/kanji_range/: main.cpp
glUI/iconCreator/: main.py
misc/: cat.raw
test/: CMakeLists.txt  customWidget.cpp  drawlist_test.cpp  logger_test.cpp  main_test.cpp  test_garbage.cpp  widget_test.cpp
